<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/codriver_logo_transparent" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingTop="20sp"
            android:shadowColor="#0E0E0E"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="45sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:shadowColor="#0E0E0E"
            android:text="@string/signInPrompt"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:drawableStart="@drawable/google_icon"
            android:elevation="8dp"
            android:text="@string/signInButton"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:shadowColor="#0E0E0E"
            android:text="@string/groupDescription"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>